# rescue-chess

./: Cargo.toml  README.md
app/: .prettierrc.yml  .yarnrc.yml  package.json  tsconfig.json
app/src/: App.svelte  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/schemas/: desktop-schema.json
app/src-tauri/src/: commands.rs  global_state.rs  main.rs
app/src/lib/: Arrow.svelte  ChessBoard.svelte  ChessPiece.svelte  ChessPieces.svelte  Controls.svelte  PossibleMove.svelte  chess.ts
src/: bitboard.rs  board.rs  evaluation.rs  features.rs  fen.rs  lib.rs  piece.rs  piece_move.rs  pos.rs  position.rs  search.rs  uci.rs  variation.rs
src/evaluation/: ordering.rs  square_bonus.rs
src/piece/: bishop.rs  king.rs  knight.rs  occupancy.rs  pawn.rs  queen.rs  rescue_drop.rs  rook.rs
src/piece/bishop/: magic.rs  occupancy.rs
src/piece/queen/: magic.rs  occupancy.rs
src/piece/rook/: magic.rs  occupancy.rs
src/piece_move/: parser.rs
src/position/: extended_fen.rs  fen.rs
src/search/: alpha_beta.rs  game_state.rs  history.rs  iterative_deepening.rs  killer_moves.rs  mod.rs  negamax.rs  negamax_hashing.rs  quiescence_search.rs  search_results.rs  transposition_table.rs
src/uci/: commands.rs
src/uci/commands/: go.rs  isready.rs  position.rs  setoption.rs  uci.rs
