[package]
name = "rescue-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrayvec = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
clap_derive = "4.4.7"
colored = "2.1.0"
fxhash = "0.2.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }

[[bin]]
name = "get_best_move"

[[bin]]
name = "random_position"
